# llm-context-recall-benchmark

./: .gitignore  README.md  bench.py  benchmark_plan.md  pyproject.toml
.github/workflows/: lab-runtime-checks.yml
analysis/: visualize.py
bench/: bundle.py  compare.py  depth.py  diagnose.py  extract.py  model_report.py  runner.py  summary.py  validate.py
configs/corpora/: jquery.toml  multi_file_duplicates.toml  synthetic_distractors.toml  synthetic_recall.toml
docs/: AI_ACCELERATOR_LABS_PRD.md
fixtures/: synthetic_distractors.py  synthetic_recall.py
fixtures/multi_file/: a.py  b.py
fixtures/responses/: send_head_hallucinated.txt  send_head_indent_changed.txt  send_head_perfect.txt  send_head_truncated.txt
fixtures/results/: compare_baseline.json  (+2 more)
labs/: 01_ground_truth_extraction.md  02_prompt_inspection.md  03_prompt_strategy_ab_test.md  04_synthetic_recall.md  05_distractor_recall.md  06_duplicate_names.md  07_rescoring_without_llm.md  08_result_lineage.md  09_final_model_report.md  10_result_contract_validation.md  README.md  instructor_runbook.md
scripts/: generate_synthetic_corpus.py  run_lab_runtime_checks.py
tests/: fake_openai_server.py  test_bundle_cli.py  test_ci_workflow.py  test_compare_cli.py  test_depth_cli.py  test_diagnose_cli.py  test_duplicate_extraction.py  test_fake_openai_server.py  test_lab_docs.py  test_model_report_cli.py  test_prompt_cli.py  test_rescore_fixtures.py  test_result_lineage.py  test_runtime_checks.py  test_smoke.py  test_summary_cli.py  test_synthetic_generator.py  test_validate_cli.py  test_visualize.py
