[project]
name = "llm-context-recall-benchmark"
version = "0.1.0"
description = "Benchmark positional source-code recall in long-context LLM prompts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "esprima>=4.0.1",
    "httpx>=0.27.0",
    "plotly>=5.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
